add manage analytics functionality